version/0.17/_sources/api/ansys/additive/core/examples/downloads/CustomMaterialExampleFiles.rst.txt




CustomMaterialExampleFiles
==========================

.. py:class:: CustomMaterialExampleFiles(material_configuration_file: str, thermal_properties_lookup_file: str, characteristic_width_lookup_file: str)
   :canonical: ansys.additive.core.examples.downloads.CustomMaterialExampleFiles





   Holds the files associated with a custom material definition.


   :Parameters:

       **material_configuration_file** : :class:`python:str`
           Path to the material configuration file.

       **thermal_properties_lookup_file** : :class:`python:str`
           Path to the thermal properties lookup file.

       **characteristic_width_lookup_file** : :class:`python:str`
           Path to the characteristic width lookup file.














   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: CustomMaterialExampleFiles
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~material_configuration_file`
            - Path to the material configuration file.
          * - :py:attr:`~thermal_properties_lookup_file`
            - Path to the thermal properties lookup file.
          * - :py:attr:`~characteristic_width_lookup_file`
            - Path to the characteristic width lookup file.






Import detail
-------------

.. code-block:: python

    from ansys.additive.core.examples.downloads import CustomMaterialExampleFiles


Property detail
---------------
.. py:property:: material_configuration_file
   :canonical: ansys.additive.core.examples.downloads.CustomMaterialExampleFiles.material_configuration_file
   :type: None


   
   Path to the material configuration file.
















   ..
       !! processed by numpydoc !!

.. py:property:: thermal_properties_lookup_file
   :canonical: ansys.additive.core.examples.downloads.CustomMaterialExampleFiles.thermal_properties_lookup_file
   :type: None


   
   Path to the thermal properties lookup file.
















   ..
       !! processed by numpydoc !!

.. py:property:: characteristic_width_lookup_file
   :canonical: ansys.additive.core.examples.downloads.CustomMaterialExampleFiles.characteristic_width_lookup_file
   :type: None


   
   Path to the characteristic width lookup file.
















   ..
       !! processed by numpydoc !!





